fix: message block body margin to align with design (#786)
* feat: remove mention highlight from conversation item

* feat: add cotent-highlight tests

* fix: remove primary variant to keep ui default

* feat: add sender prefix to message preview

* feat: mentions WIP

* feat: add max height to suggestions

* feat: update ui for suggestions and add avatar/profileImage

* refactor: remove unused style classes

* fix: reduce list padding due to padding used for scrollbar

* feat: truncate long display names

* feat: re-style mention tag in sent or received messages

* refactor: remove commented code

* fix: resolve failing tests

* fix: block body margin to align with design

* fix: remove top margin for block-body (only bottom required)

--- a/src/platform-apps/channels/styles.scss
+++ b/src/platform-apps/channels/styles.scss
@@ -268,6 +268,7 @@ $scrollbar-width: 5px;
           position: relative;
           border-top-left-radius: 0;
           border-bottom-left-radius: 0;
+          margin: 0 0 4px 0;
 
           &.chat-message__input-wrapper {
             background: none;
